Fixing some overflow issues. Most of head done.

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 
 .main-container
 {
+  border:2px solid red;
+  dispaly:flex;
+  flex-direction: column;
+  flex-wrap:nowrap;
   box-shadow: -10px 10px 100px 50px rgba(0, 0, 0, 0.2);
   width:auto;
   margin-left:10%;
   margin-right:10%;
-  dispaly:flex;
-  flex-direction: column;
   background-color:#EAEAEA;
 }
 .main-container .head
@@ -14,7 +16,7 @@
   background-color:#8ba4f7;
   display:flex;
   flex-direction: column;
-  height:450px;
+  height:auto;
 
 }
 .main-container .head .nav
@@ -48,8 +50,9 @@
 }
 .main-container .head .body .logo-large
 {
-  width:auto;
-  height:100%;
+  border:2px solid red;
+  width:35%;
+  height:auto;
 }
 .main-container .head .body .info
 {
@@ -68,16 +71,10 @@
 .main-container .head .body .info .name .title
 {
   margin-left:5%;
-  width:900px;
+  width:100%;
   height:auto;
 }
-.img-nav
-{
-  height:75px;
-  margin-left:10%;
-  height:90px;
-  width:auto;
-}
+
 .img-logo-largeead .body .info .tagline
 {
   height:70%;
@@ -111,13 +108,13 @@
 .img-nav
 {
   margin-left:10%;
-  height:90px;
+  height:100%;
   width:auto;
 }
 .img-logo-large
 {
   height:auto;
-  width:325px;
+  width:100%;
 }
 .tagline-style
 {
